--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
   "name": "node-js-getting-started",
-  "version": "0.1.3",
-  "description": "A sample Node.js app using Express 4",
+  "description": "A trivia app using the MEAN stack with Backbone.js, deployed on Heroku",
+  "keywords": ["node", "heroku", "express", "trivia"],
+  "author": "Scott Hill",
+  "license": "MIT",
+  "version": "1.0.0",
+  "homepage": "https://github.com/hillscottc/nodequest",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hillscottc/nodequest.git"
+  },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.9.8"
+    "express": "^4.9.8",
+    "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.0.0",
+    "express": "~4.9.0",
+    "express-handlebars": "^1.1.0",
+    "handlebars": "^2.0.0",
+    "jade": "~1.6.0",
+    "mongoose": "^3.8.22",
+    "morgan": "~1.3.0"
   },
   "engines": {
     "node": "0.12.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "license": "MIT"
+  }
 }
