--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "node-js-getting-started",
+  "name": "TrivNode",
   "description": "A trivia app using the MEAN stack with Backbone.js, deployed on Heroku",
   "keywords": ["node", "heroku", "express", "trivia"],
   "author": "Scott Hill",
   "license": "MIT",
   "version": "1.0.0",
-  "homepage": "https://github.com/hillscottc/nodequest",
+  "homepage": "https://github.com/hillscottc/trivnode",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hillscottc/nodequest.git"
+    "url": "https://github.com/hillscottc/trivnode.git"
   },
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
