--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "~2.1.3",
+    "jquery-ui": "~1.11.4",
+    "backbone": "~1.1.2",
+    "underscore": "~1.8.3"
+  }
 }
