--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "TrivNode",
   "description": "A trivia app using the MEAN stack with Backbone.js, deployed on Heroku",
-  "keywords": ["node", "heroku", "express", "trivia"],
+  "keywords": [
+    "node",
+    "heroku",
+    "express",
+    "trivia"
+  ],
   "author": "Scott Hill",
   "license": "MIT",
   "version": "1.0.0",
@@ -13,19 +18,25 @@
   "main": "main.js",
   "scripts": {
     "start": "node main.js",
+    "build": "browserify public/js/app.js -o public/js/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.9.8",
+    "backbone": "^1.1.2",
     "body-parser": "~1.8.1",
+    "browserify": "^9.0.8",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "express-handlebars": "^1.1.0",
     "handlebars": "^2.0.0",
     "jade": "~1.6.0",
+    "jquery": "^2.1.3",
+    "jquery-ui": "^1.10.5",
     "mongoose": "^3.8.22",
-    "morgan": "~1.3.0"
+    "morgan": "~1.3.0",
+    "underscore": "^1.8.3",
+    "watchify": "^3.1.2"
   },
   "engines": {
     "node": "0.12.2"
