--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node main.js",
     "build": "browserify public/js/app.js -o public/js/bundle.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/"
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,8 @@
     "mongoose": "^4.3.3",
     "morgan": "^1.6.1",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "supertest": "^1.1.0"
   }
 }
