--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery-ui": "^1.10.5",
     "mongod": "^1.3.0",
     "mongoose": "^4.3.3",
+    "mongoose-simple-random": "^0.3.3",
     "morgan": "^1.6.1",
     "underscore": "^1.8.3"
   },
