--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "backbone": "^1.2.3",
     "body-parser": "^1.14.2",
     "browserify": "^12.0.1",
+    "config": "^1.19.0",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
     "express": "^4.13.3",
