--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^4.3.3",
     "mongoose-simple-random": "^0.3.3",
     "morgan": "^1.6.1",
+    "printf": "^0.2.3",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
