can get 'klues' from postgres db using knex

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "backbone": "^1.2.3",
     "body-parser": "^1.14.2",
+    "bookshelf": "^0.9.1",
     "config": "^1.19.0",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
@@ -26,10 +27,12 @@
     "handlebars": "^4.0.5",
     "jquery": "^2.1.4",
     "jquery-ui": "^1.10.5",
+    "knex": "^0.9.0",
     "mongod": "^1.3.0",
     "mongoose": "^4.3.3",
     "mongoose-simple-random": "^0.3.3",
     "morgan": "^1.6.1",
+    "pg": "^4.4.4",
     "printf": "^0.2.3",
     "underscore": "^1.8.3"
   },
