--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "homepage": "https://github.com/hillscottc/trivnode#readme",
   "dependencies": {
+    "async": "^1.5.2",
     "backbone": "^1.2.3",
     "body-parser": "^1.14.2",
     "bookshelf": "^0.9.1",
