--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,11 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.3",
-    "jquery-ui": "~1.11.4",
-    "backbone": "~1.1.2",
-    "underscore": "~1.8.3"
+    "jquery": "^2.2.2",
+    "jquery-ui": "^1.11.4",
+    "backbone": "^1.3.2",
+    "underscore": "^1.8.3",
+    "babel": "*",
+    "bootstrap": "^3.3.6"
   }
 }
